# desired-interior

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  release-please-config.json
.claude/: settings.json
.claude/agents/: architecture-keeper.md  caveman-reviewer.md  design-reviewer.md  security-auditor.md
.claude/commands/: start-task.md  sync.md  wrap-pr.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  e2e.yml  release-please.yml
apps/api/: export_schema.py  pyproject.toml  run_server.py
apps/api/app/: auth.py  dependencies.py  disk_cache.py  exceptions.py  logging_config.py  main.py  schemas.py  settings.py  settings_router.py
apps/api/app/cloud/: fal_client.py
apps/api/app/compose/: cache.py  composition.py  harmonize.py  harmonize_cache.py  preview.py  preview_cache.py  router.py
apps/api/app/objects/: cache.py  extraction.py  router.py
apps/api/app/objects/background_removal/: __init__.py  birefnet.py  bria.py
apps/api/app/scenes/: cache.py  cleanup.py  cleanup_cache.py  preprocessing.py  router.py  segment.py
apps/api/scripts/: harmonizer_bench.py
apps/api/tests/: test_bg_removal_drivers.py  test_composition.py  test_e2e_pipeline.py  test_error_codes.py  test_fal_client.py  test_harmonize.py  test_harmonizer_bench.py  test_health.py  test_logging.py  test_object_extraction.py  test_preview.py  test_run_server.py  test_scene_cleanup.py  test_scene_preprocessing.py  test_segment.py  test_settings.py
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts
docs/: IPC.md  ML_PIPELINE.md  harmonizer_tuning.md  keyboard-shortcuts.md
docs/adr/: 0001-branch-protection.md  (+7 more)
(+40 files in other folders)
